--- a/app_1/templates/app_1/header.html
+++ b/app_1/templates/app_1/header.html
@@ -1,14 +1,12 @@
+
+{% load static  %}
 <!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strona główna</title>
-    <style>
-        .corect {
-            color:red;
-        }
-    </style>
+    <link href="{% static '/style.css' %}" rel="stylesheet" >
 </head>
 <body>
     
